{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 110,
  "lineage": "32dc58a2-3499-ede2-f81f-2074eac56405",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:internet-gateway/igw-0a751c06b95fb4b9f",
            "id": "igw-0a751c06b95fb4b9f",
            "owner_id": "741448930723",
            "tags": {
              "Name": "IGW vpc virginia-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "IGW vpc virginia-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-logs-personaloa6i",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:741448930723:loadbalancer/app/alb-virg-personal-North-Virg-Dev/734c9914b19c8fff",
            "arn_suffix": "app/alb-virg-personal-North-Virg-Dev/734c9914b19c8fff",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-virg-personal-North-Virg-Dev-794390281.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:741448930723:loadbalancer/app/alb-virg-personal-North-Virg-Dev/734c9914b19c8fff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-virg-personal-North-Virg-Dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-036a0ddff4acacd20"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013af6f970eff953d"
              },
              {
                "subnet_id": "subnet-04826af4f90f3fee9"
              }
            ],
            "subnets": [
              "subnet-013af6f970eff953d",
              "subnet-04826af4f90f3fee9"
            ],
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "vpc_id": "vpc-03d806ad396aefba5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_security_group.sg_alb",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "random_string.sufijo-s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:741448930723:listener/app/alb-virg-personal-North-Virg-Dev/734c9914b19c8fff/ff3605f47dabac4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:741448930723:targetgroup/tg-alb-personal-North-Virg-Dev/7539795bfdfff17c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:741448930723:listener/app/alb-virg-personal-North-Virg-Dev/734c9914b19c8fff/ff3605f47dabac4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:741448930723:loadbalancer/app/alb-virg-personal-North-Virg-Dev/734c9914b19c8fff",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb_virginia",
            "aws_lb_target_group.tg_alb",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.sg_alb",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "random_string.sufijo-s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:741448930723:targetgroup/tg-alb-personal-North-Virg-Dev/7539795bfdfff17c",
            "arn_suffix": "targetgroup/tg-alb-personal-North-Virg-Dev/7539795bfdfff17c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:741448930723:targetgroup/tg-alb-personal-North-Virg-Dev/7539795bfdfff17c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-alb-personal-North-Virg-Dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:route-table/rtb-0fd38f4e88087b87f",
            "id": "rtb-0fd38f4e88087b87f",
            "owner_id": "741448930723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a751c06b95fb4b9f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_crt-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "public_crt-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0dfd254cbc1f89d",
            "route_table_id": "rtb-0fd38f4e88087b87f",
            "subnet_id": "subnet-013af6f970eff953d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab5c6a491c987216",
            "route_table_id": "rtb-0fd38f4e88087b87f",
            "subnet_id": "subnet-04826af4f90f3fee9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:security-group/sg-036a0ddff4acacd20",
            "description": "Allow incoming HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036a0ddff4acacd20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_alb-personal-North-Virg-Dev",
            "name_prefix": "",
            "owner_id": "741448930723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-alb-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "sg-alb-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:security-group/sg-032e77cf14c52e710",
            "description": "Allow traffic only from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032e77cf14c52e710",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH for admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic only from the ALB SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-036a0ddff4acacd20"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_asg-personal-North-Virg-Dev",
            "name_prefix": "",
            "owner_id": "741448930723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-asg-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "sg-asg-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:subnet/subnet-06b58d94be9c6b551",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b58d94be9c6b551",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448930723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "public-us-east-1a-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:subnet/subnet-0bf15913a092e2800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf15913a092e2800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448930723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "public-us-east-1b-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:subnet/subnet-013af6f970eff953d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013af6f970eff953d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "public-us-east-1a-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:subnet/subnet-04826af4f90f3fee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04826af4f90f3fee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448930723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "public-us-east-1b-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            },
            "vpc_id": "vpc-03d806ad396aefba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741448930723:vpc/vpc-03d806ad396aefba5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0399a775e9f693716",
            "default_route_table_id": "rtb-0b185f6d74a2c1a02",
            "default_security_group_id": "sg-0f36a0eabcc466f1e",
            "dhcp_options_id": "dopt-00d6770b612a93c7d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d806ad396aefba5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b185f6d74a2c1a02",
            "owner_id": "741448930723",
            "tags": {
              "Name": "vpc_virginia-personal-North-Virg-Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_version": "v1.12.2",
              "Name": "vpc_virginia-personal-North-Virg-Dev",
              "cloud": "AWS",
              "env": "Dev",
              "owner": "Marce",
              "proyecto": "personal",
              "region": "North-Virg"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}